tests/agl/rejections/parse/partial_placeholder_numbered_zero.agl
def f(x: int) -> int = x

let bad = f(?0)
